added email feature

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8000
+SECRET=barbarosa
+EMAIL_SERVICE=Gmail
+EMAIL_ID=freedevel0p3r
+EMAIL_TOKEN=kvcciwhygzqprawo
+EMAIL_FROM=freedevel0p3r@gmail.com
