--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
 PORT=8000
-SECRET=barbarosa
+JWT_SECRET=barbarosa
+
 EMAIL_SERVICE=Gmail
 EMAIL_ID=freedevel0p3r
 EMAIL_TOKEN=kvcciwhygzqprawo
 EMAIL_FROM=freedevel0p3r@gmail.com
+
+MONGO_USERNAME=danyal
+MONGO_PASSWORD=bismIllah
+MONGO_URL=172.17.0.2:27017
+MONGO_DBNAME=jump_backend
+MONGO_TABLENAME=cache
