--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ MONGO_PASSWORD=bismIllah
 MONGO_URL=172.17.0.2:27017
 MONGO_DBNAME=jump_backend
 MONGO_TABLENAME=cache
+DOC_TTL=10
+DOC_SIZE=1024
+MAX_DOCS=5
