--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "lint-staged": {
     "**/*.{js,json}": [
       "prettier --write",
-      "eslint --fix",
-      "yarn test"
+      "eslint --fix"
     ]}
 }
