--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,json}": [
-      "prettier --write",
-       "eslint --fix"
+      "prettier --write"
     ]
   }
 }
